--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>admin dashboard</title>
     <link rel="stylesheet" href="/style2.css">
+    <link rel="icon" href="logo.png"
+    type="image/x-icon">
 </head>
 <body id="admin">
     <div id="admin_header">
@@ -34,7 +36,7 @@
             <option value="Comedy">Comedy</option>
             <option value="Workshops">Workshops</option>
             <option value="Courses">Courses</option>
-            <option value="Theatre&Art">Theatre & Art</option>
+            <option value="Theatre">Theatre & Art</option>
 
              </select>
             <br>
@@ -112,8 +114,7 @@
             </div>
         <% }); %>
     <% } %>
-    
-     
+
      
     
     <img id="admin-image" src="multicultural-people-crowd-diverse-person-group-vector-34881635.png" width="900">
