--- a/public/style2.css
+++ b/public/style2.css
@@ -71,7 +71,7 @@
      padding-left: 0;
  }
  
- input[type="text"], input[type="date"], select {
+ input[type="number"],input[type="text"], input[type="date"], select {
      width: 100%;
      padding: 10px;
      margin: 5px 0 20px 0;
