--- a/views/event-details.ejs
+++ b/views/event-details.ejs
@@ -8,82 +8,83 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="/style3.css">
+    <link rel="icon" href="logo.png"
+    type="image/x-icon">
 
 </head>
 <body>
-    <header class="container-fluid d-flex justify-content-between align-items-center py-3">
-        <div class="d-flex align-items-center me-auto w-75">
-            <a href="#" class="text-decoration-none d-flex align-items-center">
-              <h1 class="me-5">crowwd</h1>
-            </a>
-            <form class="d-flex me-3" action="/search-events" method="POST" >
-              <input class="form-control me-2" type="search" placeholder="Search for events,locations.." aria-label="Search" id="searchInput" name="searchQuery">
-              <button class="btn btn-outline-success " type="submit">Go</button>
-            </form>
-         </div>
-         <div class="me-5 ms-lg-auto ms-lg-5 justify-content-lg-end">
-            <form class="d-none d-lg-flex me-lg-5 ms-lg-auto" action="/search-events-by-date-and-location" method="POST">
-                <div class="input-group">
-                    <label for="from-date" class="me-2">From:</label>
-            <input type="date" class="form-control me-2" id="from-date" name="fromDate">
-            <label for="to-date" class="me-2">To:</label>
-            <input type="date" class="form-control me-2" id="to-date" name="toDate">
-            <label for="select-location" class="me-2">Select location</label>
-            <select class="form-select me-2" name="location" id="cities">
-              <option value="Alappuzha">Alappuzha</option>
-              <option value="Thrissur">Thrissur</option>
-              <option value="Palakkad">Palakkad</option>
-              <option value="Malappuram">Malappuram</option>
-              <option value="Manjeri">Manjeri</option>
-              <option value="Thalassery">Thalassery</option>
-              <option value="Kannur">Kannur</option>
-              <option value="Kasaragod">Kasaragod</option>
-              <option value="Kollam">Kollam</option>
-              <option value="Neyyattinkara">Neyyattinkara</option>
-              <option value="Kottayam">Kottayam</option>
-              <option value="Pala">Pala</option>
-              <option value="Aluva">Aluva</option>
-              <option value="Angamaly">Angamaly</option>
-              <option value="Thodupuzha">Thodupuzha</option>
-              <option value="Muvattupuzha">Muvattupuzha</option>
-              <option value="Perumbavoor">Perumbavoor</option>
-              <option value="Kothamangalam">Kothamangalam</option>
-              <option value="Vaikom">Vaikom</option>
-              <option value="Cherthala">Cherthala</option>
-              <option value="Changanassery">Changanassery</option>
-              <option value="Kozhencherry">Kozhencherry</option>
-              <option value="Adoor">Adoor</option>
-              <option value="Pathanamthitta">Pathanamthitta</option>
-              <option value="Pandalam">Pandalam</option>
-              <option value="Kayamkulam">Kayamkulam</option>
-              <option value="Mavelikkara">Mavelikkara</option>
-              <option value="Chengannur">Chengannur</option>
-              <option value="Thiruvalla">Thiruvalla</option>
-              <option value="Punalur">Punalur</option>
-              <option value="Paravur">Paravur</option>
-              <option value="Kochi">Kochi</option>
-              <option value="Kozhikode">Kozhikode</option>
-              <option value="Thiruvananthapuram">Thiruvananthapuram</option>
-              <option value="Kollam">Kollam</option>
-            </select>
-        </div>
-            <button class="btn btn-outline-success" type="submit" id="go">Go</button>
-            </form>
+  <header class="container-fluid d-flex justify-content-start align-items-center py-4">
+    <div class="d-flex align-items-center me-auto ">
+        <a href="#" class="text-decoration-none d-flex align-items-center">
+          <h1 class="me-5">crowwd</h1>
+        </a>
+        <form class="d-flex me-3" action="/search-events" method="POST" >
+          <input class="form-control me-2" type="search" placeholder="Search for events,locations.." aria-label="Search" id="searchInput" name="searchQuery">
+          <button class="btn btn-outline-success " type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
+     </div>
+     <div class="me-4 ms-lg-auto ms-lg-5 justify-content-lg-start">
+        <form class="d-none d-lg-flex me-lg-5 ms-lg-auto" action="/search-events-by-date-and-location" method="POST">
+            <div class="input-group">
+                <label id="date-header" for="from-date" class="me-2">From :</label>
+        <input type="date" class="form-control me-2" id="from-date" name="fromDate">
+        <label id="date-header" for="to-date" class="me-2">To :</label>
+        <input type="date" class="form-control me-2" id="to-date" name="toDate">
+        <label id="date-header" for="select-location" class="me-2">Select location </label>
+        <select id="to-date" class="form-select me-2" name="location" id="cities">
+          <option value="Alappuzha">Alappuzha</option>
+          <option value="Thrissur">Thrissur</option>
+          <option value="Palakkad">Palakkad</option>
+          <option value="Malappuram">Malappuram</option>
+          <option value="Manjeri">Manjeri</option>
+          <option value="Thalassery">Thalassery</option>
+          <option value="Kannur">Kannur</option>
+          <option value="Kasaragod">Kasaragod</option>
+          <option value="Kollam">Kollam</option>
+          <option value="Neyyattinkara">Neyyattinkara</option>
+          <option value="Kottayam">Kottayam</option>
+          <option value="Pala">Pala</option>
+          <option value="Aluva">Aluva</option>
+          <option value="Angamaly">Angamaly</option>
+          <option value="Thodupuzha">Thodupuzha</option>
+          <option value="Muvattupuzha">Muvattupuzha</option>
+          <option value="Perumbavoor">Perumbavoor</option>
+          <option value="Kothamangalam">Kothamangalam</option>
+          <option value="Vaikom">Vaikom</option>
+          <option value="Cherthala">Cherthala</option>
+          <option value="Changanassery">Changanassery</option>
+          <option value="Kozhencherry">Kozhencherry</option>
+          <option value="Adoor">Adoor</option>
+          <option value="Pathanamthitta">Pathanamthitta</option>
+          <option value="Pandalam">Pandalam</option>
+          <option value="Kayamkulam">Kayamkulam</option>
+          <option value="Mavelikkara">Mavelikkara</option>
+          <option value="Chengannur">Chengannur</option>
+          <option value="Thiruvalla">Thiruvalla</option>
+          <option value="Punalur">Punalur</option>
+          <option value="Paravur">Paravur</option>
+          <option value="Kochi">Kochi</option>
+          <option value="Kozhikode">Kozhikode</option>
+          <option value="Thiruvananthapuram">Thiruvananthapuram</option>
+          <option value="Kollam">Kollam</option>
+        </select>
+    </div>
+        <button class="btn btn-outline-success" type="submit" id="go">Go</button>
+        </form>
+      </div>
+      <div  class="d-none d-lg-flex align-items-center">
+        <div id="myNav" class="overlay">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <div class="overlay-content">
+            <a href="#">Logout</a>
+            <a href="#">About</a>
+            <a href="/admin">List an event</a>
+            <a href="#">Contact</a>
           </div>
-          <div class="d-none d-lg-flex align-items-center">
-            <a href="#" class="ms-3 text-decoration-none">Logout</a>
-            <div id="myNav" class="overlay">
-              <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-              <div class="overlay-content">
-                <a href="#">About</a>
-                <a href="#">Services</a>
-                <a href="#">Clients</a>
-                <a href="#">Contact</a>
-              </div>
-            </div>
-            <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-         </div>
-      </header>
+        </div>
+        <span id="sandwich" onclick="openNav()">&#9776;</span>
+     </div>
+  </header>
       
       <div class="row w-100">
 
@@ -96,43 +97,58 @@
             <h1><%= event.textbox4 %></h1>
             <h2><%= event.textbox1 %></h2>
             <p><%= event.textbox5 %></p>
-            <h4><%= event.dropdown1 %></h4>
-            <h4><%= new Date(event.datePicker).toLocaleDateString('en-US', {year: 'numeric', month: 'long', day: 'numeric' }) %></h4>
-            <h4><%= event.textbox6 %></h4>
-            <h4><%= event.dropdown2 %></h4>
+            <h4 id="event-desc"><%= event.dropdown1 %></h4>
+            <h4 id="event-desc"><%= new Date(event.datePicker).toLocaleDateString('en-US', {year: 'numeric', month: 'long', day: 'numeric' }) %></h4>
+            <h4 id="event-desc">Venue: <%= event.textbox6 %></h4>
+            <h4 id="event-desc"><%= event.dropdown2 %></h4>
+            <br>
+            <br>
+            <h3>Travel</h3>
+            <br>
 
-            <div class="travel d-flex justify-content-center align-items-center">
+            <div class="travel">
               <div class="icon-container">
-                  <i class="fa-solid fa-bus fa-2x me-2"></i>
-                  <p><%= event.textbox7 %></p>
+                  <i class="fa-solid fa-bus fa-2x me-2" id="icons-event-details"></i>
+                  <p id="travel-event-details"><%= event.textbox7 %></p>
               </div>
               <div class="icon-container">
-                  <i class="fa-solid fa-train fa-2x me-2"></i>
-                  <p><%= event.textbox8 %></p>
+                  <i class="fa-solid fa-train fa-2x me-2" id="icons-event-details"></i>
+                  <p id="travel-event-details"><%= event.textbox8 %></p>
               </div>
               <div class="icon-container">
-                  <i class="fa-solid fa-plane-departure fa-2x"></i>
-                  <p><%= event.textbox9 %></p>
+                  <i class="fa-solid fa-plane-departure fa-2x" id="icons-event-details"></i>
+                  <p id="travel-event-details"><%= event.textbox9 %></p>
               </div>
           </div>
+          <br>
+          <br>
           
- 
+          <h5 id="event-desc"> Tickets available : <%= event.totalTickets %></h5>
           
-<form id="bookEventForm" action="/book-event/<%= event._id %>" method="post">
+              <form id="bookEventForm" action="/book-event/<%= event._id %>" method="post">
                 <div class="d-flex align-items-left">
 
                 <input type="number" class="form-control text-center" value="1"  id="quantity" name="quantity">
             </div>
-            <button class="btn btn-success mt-3" type="submit">Book Now</button>
+            <button class="btn btn-success mt-3" type="submit" onclick="openPopup()">Book Now</button>
+            <div class="popup" id="popup">
+              <img src="Background.png" alt="">
+              <h2>Thank You</h2>
+              <p>Event Booked </p>
+              <button type="button" id="popup-button" onclick="closePopup()">OK</button>
+          </div>
               </form>
                
         </div>
 
     </div>
+    <br>
+    <br>
+
   
     <!-- Similar Events Section -->
 <div class="similar-events">
-  <h2>Similar Events</h2>
+  <h2 id="trending">Similar Events</h2>
   <div class="row">
       <% similarEvents.forEach(function(event) { %>
           <div class="col-md-4">
@@ -141,13 +157,40 @@
                   <div class="card-body">
                       <h5 class="card-title"><%= event.textbox4 %></h5>
                       <p class="card-text"><%= event.textbox1 %></p>
-                      <a href="/event/<%= event._id %>" class="btn btn-primary">View Details</a>
+                      <a href="/event/<%= event._id %>" id="view-details" class="btn btn-primary">View Details</a>
                   </div>
               </div>
           </div>
       <% }); %>
   </div>
 </div>
+<footer>
+  <div class="row-footer">
+      <div class="col-footer">
+      <h1 class="logo-footer">crowwd</h1>                    
+         <p>Crowwd is a one stop marketplace for events, music festivals,cultural
+          festivals, concerts, venues etc.Whether it’s a concert, conference, workshop, or cultural festival</p>
+      </div>
+      <div class="col">
+          <h3>FISAT</h3>
+          <p>Hormiz nagar, Mookkanoor</p>
+          <p>Angamaly,683576</p>
+          <p class="email-id-footer">arunmanoj005@gmail.com</p>
+          <p>+91-9400358309</p>
+      </div>
+      
+      <div class="col">
+          <div class="social-icons-footer">
+              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-x-twitter"></i>
+          </div>
+
+      </div>
+  </div>
+  <hr class="hr-footer">
+  <p class="copyright-footer">crowwd &copy; 2024 All Rights Reserved </p>
+</footer>
 
 
 
@@ -165,6 +208,13 @@
           event.preventDefault(); // Prevent form submission
       }
   });
+  let popup=document.getElementById("popup");
+        function openPopup(){
+            popup.classList.add("open-popup");
+        }
+        function closePopup(){
+            popup.classList.remove("open-popup");
+        }
   </script>
   
 
