--- a/views/events.ejs
+++ b/views/events.ejs
@@ -8,81 +8,82 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/style3.css">
+     <link rel="icon" href="logo.png"
+          type="image/x-icon">
 </head>
 <body class="body-events">
-    <header class="container-fluid d-flex justify-content-between align-items-center py-3">
-        <div class="d-flex align-items-center me-auto w-75">
-            <a href="#" class="text-decoration-none d-flex align-items-center">
-              <h1 class="me-5">crowwd</h1>
-            </a>
-            <form class="d-flex me-3" action="/search-events" method="POST" >
-              <input class="form-control me-2" type="search" placeholder="Search for events,locations.." aria-label="Search" id="searchInput" name="searchQuery">
-              <button class="btn btn-outline-success " type="submit">Go</button>
-            </form>
-         </div>
-         <div class="me-5 ms-lg-auto ms-lg-5 justify-content-lg-end">
-            <form class="d-none d-lg-flex me-lg-5 ms-lg-auto" action="/search-events-by-date-and-location" method="POST">
-                <div class="input-group">
-                    <label for="from-date" class="me-2">From:</label>
-            <input type="date" class="form-control me-2" id="from-date" name="fromDate">
-            <label for="to-date" class="me-2">To:</label>
-            <input type="date" class="form-control me-2" id="to-date" name="toDate">
-            <label for="select-location" class="me-2">Select location</label>
-            <select class="form-select me-2" name="location" id="cities">
-              <option value="Alappuzha">Alappuzha</option>
-              <option value="Thrissur">Thrissur</option>
-              <option value="Palakkad">Palakkad</option>
-              <option value="Malappuram">Malappuram</option>
-              <option value="Manjeri">Manjeri</option>
-              <option value="Thalassery">Thalassery</option>
-              <option value="Kannur">Kannur</option>
-              <option value="Kasaragod">Kasaragod</option>
-              <option value="Kollam">Kollam</option>
-              <option value="Neyyattinkara">Neyyattinkara</option>
-              <option value="Kottayam">Kottayam</option>
-              <option value="Pala">Pala</option>
-              <option value="Aluva">Aluva</option>
-              <option value="Angamaly">Angamaly</option>
-              <option value="Thodupuzha">Thodupuzha</option>
-              <option value="Muvattupuzha">Muvattupuzha</option>
-              <option value="Perumbavoor">Perumbavoor</option>
-              <option value="Kothamangalam">Kothamangalam</option>
-              <option value="Vaikom">Vaikom</option>
-              <option value="Cherthala">Cherthala</option>
-              <option value="Changanassery">Changanassery</option>
-              <option value="Kozhencherry">Kozhencherry</option>
-              <option value="Adoor">Adoor</option>
-              <option value="Pathanamthitta">Pathanamthitta</option>
-              <option value="Pandalam">Pandalam</option>
-              <option value="Kayamkulam">Kayamkulam</option>
-              <option value="Mavelikkara">Mavelikkara</option>
-              <option value="Chengannur">Chengannur</option>
-              <option value="Thiruvalla">Thiruvalla</option>
-              <option value="Punalur">Punalur</option>
-              <option value="Paravur">Paravur</option>
-              <option value="Kochi">Kochi</option>
-              <option value="Kozhikode">Kozhikode</option>
-              <option value="Thiruvananthapuram">Thiruvananthapuram</option>
-              <option value="Kollam">Kollam</option>
-            </select>
-        </div>
-            <button class="btn btn-outline-success" type="submit" id="go">Go</button>
-            </form>
+  <header class="container-fluid d-flex justify-content-start align-items-center py-4">
+    <div class="d-flex align-items-center me-auto ">
+        <a href="#" class="text-decoration-none d-flex align-items-center">
+          <h1 class="me-5">crowwd</h1>
+        </a>
+        <form class="d-flex me-3" action="/search-events" method="POST" >
+          <input class="form-control me-2" type="search" placeholder="Search for events,locations.." aria-label="Search" id="searchInput" name="searchQuery">
+          <button class="btn btn-outline-success " type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
+     </div>
+     <div class="me-4 ms-lg-auto ms-lg-5 justify-content-lg-start">
+        <form class="d-none d-lg-flex me-lg-5 ms-lg-auto" action="/search-events-by-date-and-location" method="POST">
+            <div class="input-group">
+                <label id="date-header" for="from-date" class="me-2">From :</label>
+        <input type="date" class="form-control me-2" id="from-date" name="fromDate">
+        <label id="date-header" for="to-date" class="me-2">To :</label>
+        <input type="date" class="form-control me-2" id="to-date" name="toDate">
+        <label id="date-header" for="select-location" class="me-2">Select location </label>
+        <select id="to-date" class="form-select me-2" name="location" id="cities">
+          <option value="Alappuzha">Alappuzha</option>
+          <option value="Thrissur">Thrissur</option>
+          <option value="Palakkad">Palakkad</option>
+          <option value="Malappuram">Malappuram</option>
+          <option value="Manjeri">Manjeri</option>
+          <option value="Thalassery">Thalassery</option>
+          <option value="Kannur">Kannur</option>
+          <option value="Kasaragod">Kasaragod</option>
+          <option value="Kollam">Kollam</option>
+          <option value="Neyyattinkara">Neyyattinkara</option>
+          <option value="Kottayam">Kottayam</option>
+          <option value="Pala">Pala</option>
+          <option value="Aluva">Aluva</option>
+          <option value="Angamaly">Angamaly</option>
+          <option value="Thodupuzha">Thodupuzha</option>
+          <option value="Muvattupuzha">Muvattupuzha</option>
+          <option value="Perumbavoor">Perumbavoor</option>
+          <option value="Kothamangalam">Kothamangalam</option>
+          <option value="Vaikom">Vaikom</option>
+          <option value="Cherthala">Cherthala</option>
+          <option value="Changanassery">Changanassery</option>
+          <option value="Kozhencherry">Kozhencherry</option>
+          <option value="Adoor">Adoor</option>
+          <option value="Pathanamthitta">Pathanamthitta</option>
+          <option value="Pandalam">Pandalam</option>
+          <option value="Kayamkulam">Kayamkulam</option>
+          <option value="Mavelikkara">Mavelikkara</option>
+          <option value="Chengannur">Chengannur</option>
+          <option value="Thiruvalla">Thiruvalla</option>
+          <option value="Punalur">Punalur</option>
+          <option value="Paravur">Paravur</option>
+          <option value="Kochi">Kochi</option>
+          <option value="Kozhikode">Kozhikode</option>
+          <option value="Thiruvananthapuram">Thiruvananthapuram</option>
+          <option value="Kollam">Kollam</option>
+        </select>
+    </div>
+        <button class="btn btn-outline-success" type="submit" id="go">Go</button>
+        </form>
+      </div>
+      <div  class="d-none d-lg-flex align-items-center">
+        <div id="myNav" class="overlay">
+          <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <div class="overlay-content">
+            <a href="#">Logout</a>
+            <a href="#">About</a>
+            <a href="/admin">List an event</a>
+            <a href="#">Contact</a>
           </div>
-          <div class="d-flex align-items-center">
-            <a href="/" class="ms-3 text-decoration-none">Logout</a>
-            <div id="myNav" class="overlay">
-              <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-              <div class="overlay-content">
-                <a href="#">About</a>
-                <a href="#">Services</a>
-                <a href="#">Clients</a>
-                <a href="#">Contact</a>
-              </div>
-            </div>
-            <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-         </div>
-      </header>
+        </div>
+        <span id="sandwich" onclick="openNav()">&#9776;</span>
+     </div>
+  </header>
       <script>
          $(document).ready(function() {
         $('.box').click(function() {
@@ -107,7 +108,7 @@
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <div class="your-events">
-    <h1>Your events</h1>
+    <h1 id="your-events">Your events</h1>
     </div>  
     <div class="list-container">
 
