--- a/public/style3.css
+++ b/public/style3.css
@@ -172,7 +172,10 @@ padding-top: 20px;}
   text-decoration: none;
 }
 /* styles.css */
-
+.user-events{
+    display: flex;
+    flex-wrap: wrap;
+}
 /* Define a container for icon and text to display them inline */
 .icon-text-container {
   display: flex; /* Use flexbox to place items in a row */
@@ -595,3 +598,53 @@ margin-left: 44px;
     transform: translate(-50%,-50%) scale(1);
 
 }
+/* styles.css */
+
+body {
+    font-family: Arial, sans-serif;
+   }
+   
+  
+   figure {
+    display: grid;
+    border-radius: 1rem;
+    overflow: hidden;
+    cursor: pointer;
+    width: 500px;
+    height: 250px;
+  }
+  figure > * {
+    grid-area: 1/1;
+    transition: .4s;
+  }
+  figure figcaption {
+    display: grid;
+    align-items: end;
+    font-family: sans-serif;
+    font-size: 2.3rem;
+    font-weight: bold;
+    color: #0000;
+    padding: .75rem;
+    background: var(--c,#0009);
+    clip-path: inset(0 var(--_i,100%) 0 0);
+    -webkit-mask:
+      linear-gradient(#000 0 0),
+      linear-gradient(#000 0 0);
+    -webkit-mask-composite: xor;
+    -webkit-mask-clip: text, padding-box;
+    margin: -1px;
+  }
+  figure:hover figcaption{
+    --_i: 0%;
+  }
+  figure:hover img {
+    transform: scale(1.2);
+  }
+  @supports not (-webkit-mask-clip: text) {
+    figure figcaption {
+     -webkit-mask: none;
+     color: #fff;
+    }
+  }
+  
+ 
