--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,7 +11,7 @@
     <div id="admin_header">
         <h1 id="admin_logo">crowwd</h1>
         <span id="middle-text">hey <%= name %>!</span>
-        <a id="right-text" href="login.ejs">logout</a>
+        <a id="right-text" href="/">logout</a>
     </div>
     <div id="admin-form">
       <form action="/submit" method="post" enctype="multipart/form-data" class="form-container">
@@ -120,18 +120,20 @@
             </div>
 
 
+            <h2 id="event-list-head">Your Events</h2>
 
             <div id="events-list">
-                <h2>Your Events</h2>
                     <% events.forEach(function(event) { %>
                         <div class="event-item">
-                            <h3><%= event.textbox4 %></h3> <!-- Event name -->
-                            <p>Date: <%= event.datePicker %></p>
-                            <p>Location: <%= event.dropdown2 %></p>
-                            <p>Total Tickets: <%= event.totalTickets %></p>
-                            <p>Clicks: <%= event.clicks %></p>
-        
-                            <!-- Add more details as needed -->
+                            <div class="event-card">
+                                <h3><%= event.textbox4 %></h3>
+                                <p>Date: <%= new Date(event.datePicker).toLocaleDateString('en-US', {year: 'numeric' , month: 'long' , day: 'numeric' })
+                                    %></p>
+                                <p>Location: <%= event.dropdown2 %></p>
+                                <p>Balance Tickets: <%= event.totalTickets %></p>
+                                <p>Clicks: <%= event.clicks %></p>
+                            </div>
+                            
                         </div>
                     <% }); %>
             </div>
