--- a/views/event-details.ejs
+++ b/views/event-details.ejs
@@ -223,15 +223,11 @@
     <p class="copyright-footer">crowwd &copy; 2024 All Rights Reserved </p>
   </footer>
 
-
   <script>
     const quantity = document.getElementById('quantity').value;
     const id = document.getElementsByClassName('travel')[0].id;
-
     const uniqueId = `${id}@${quantity}`
-
     const encodedUniqueId = encodeURIComponent(uniqueId);
-
     const qrcode = new QRCode(document.getElementById("qrCode"), {
       text: encodedUniqueId,
       width: 256,
@@ -239,25 +235,15 @@
       colorDark: "#000000",
       colorLight: "#ffffff",
       correctLevel: QRCode.CorrectLevel.M
-    });
-
+    })
     document.getElementById("qrCode").style.display = "block"
-
-
-
-  </script>
-
-
-
-
-  <script>
     document.getElementById('bookEventForm').addEventListener('submit', function (event) {
       var quantityInput = document.getElementById('quantity');
       var quantityValue = parseInt(quantityInput.value, 10);
 
       if (isNaN(quantityValue) || quantityValue <= 0) {
         alert('Please enter a valid quantity.');
-        event.preventDefault(); // Prevent form submission
+        event.preventDefault(); 
       }
     });
     let popup = document.getElementById("popup");
@@ -268,19 +254,9 @@
       document.getElementById("qrCode").innerHTML = "";
       popup.classList.remove("open-popup");
     }
-  </script>
-
-
-
-
-  <script>
     $(document).ready(function () {
       $('.box').click(function () {
-        // Get the current width of the search input field
         var currentWidth = $('#searchInput').width();
-
-        // Set the width of the search input field to its current width
-        // This stops the animation by overriding the CSS transition
         $('#searchInput').css('width', currentWidth + 'px');
       });
     });
@@ -292,7 +268,6 @@
       document.getElementById("myNav").style.height = "0%";
     }
   </script>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jY38PBHQiwNzxEh7xdsJBj9zIxq7Czs"
     crossorigin="anonymous"></script>
