--- a/public/style3.css
+++ b/public/style3.css
@@ -341,6 +341,8 @@ img {
 .btn.btn-success.mt-3 {
     background-color: #c3073f;
     border-color: #c3073f;
+    display: none; /* Initially hide the button */
+
 }
 
 .btn.btn-success.mt-3:hover {
