--- a/views/register.ejs
+++ b/views/register.ejs
@@ -41,7 +41,11 @@
                 <input type="text" id="email" name="email" placeholder="enter you email" required autocomplete="off">
 
             </div>
-            
+            <div class="form-group-reg">
+                <label for="contact">contact :</label>
+                <input type="text" id="contact" name="contact" placeholder="enter you contact number" required autocomplete="off">
+
+            </div>
             <div class="form-group-reg">
                 <label for="password">password :</label>
                 <input type="password" name="password" id="password" placeholder="enter your password" required>
